--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-remote_theme: itszariep/Tessera
+# remote_theme: itszariep/Tessera
+theme: minima
+title: revelsix-ee's personal blog
+description: This is where I share cool stuff about my life
+author: revelsix-ee
