--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,10 @@ remote_theme: itszariep/Tessera
 title: revelsix.ee
 description: This is where I share cool stuff about my life
 author: revelsix
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      image: /preview.jpg
